--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-		<title>Mark Stone - Template</title>
+		<title>Noah Woodward</title>
 		<!-- Favicons-->
 		<link rel="shortcut icon" href="assets/images/favicon.png">
 		<link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
@@ -49,8 +49,7 @@
 							<li><a href="#home"><span class="menu-item-span">Home</span></a></li>
 							<li><a href="#profile"><span class="menu-item-span">Profile</span></a></li>
 							<li><a href="#portfolio"><span class="menu-item-span">Work</span></a></li>
-							<li><a href="#services"><span class="menu-item-span">Services</span></a></li>
-							<li><a href="#resume"><span class="menu-item-span">Resume</span></a></li>
+							<li><a href="#services"><span class="menu-item-span">Resume</span></a></li>
 							<li><a href="#blog"><span class="menu-item-span">Blog</span></a></li>
 							<li><a href="#contact"><span class="menu-item-span">Connect</span></a></li>
 							<li class="menu-item-has-children"><a href="#"><span class="menu-item-span">Pages</span></a>
