Added new logo image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 							<li><a href="#home"><span class="menu-item-span">Home</span></a></li>
 							<li><a href="#profile"><span class="menu-item-span">Profile</span></a></li>
 							<li><a href="#portfolio"><span class="menu-item-span">Work</span></a></li>
-							<li><a href="#services"><span class="menu-item-span">Resume</span></a></li>
 							<li><a href="#blog"><span class="menu-item-span">Blog</span></a></li>
 							<li><a href="#contact"><span class="menu-item-span">Connect</span></a></li>
 							<li class="menu-item-has-children"><a href="#"><span class="menu-item-span">Pages</span></a>
@@ -90,8 +89,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h1 class="h1 m-b-15">Daniel Raleway</h1>
-							<h1 class="h6">and I am Professional photographer</h1>
+							<h1 class="h1 m-b-15">Noah Woodward</h1>
+							<h1 class="h6">Mind Behind The Mac</h1>
 						</div>
 					</div>
 				</div>
