Hero Layout and navbar

--- a/index.html
+++ b/index.html
@@ -49,29 +49,9 @@
 							<li><a href="#home"><span class="menu-item-span">Home</span></a></li>
 							<li><a href="#profile"><span class="menu-item-span">Profile</span></a></li>
 							<li><a href="#portfolio"><span class="menu-item-span">Work</span></a></li>
+							<li><a href="#services"><span class="menu-item-span">Resume</span></a></li>
 							<li><a href="#blog"><span class="menu-item-span">Blog</span></a></li>
 							<li><a href="#contact"><span class="menu-item-span">Connect</span></a></li>
-							<li class="menu-item-has-children"><a href="#"><span class="menu-item-span">Pages</span></a>
-								<ul class="sub-menu">
-									<li class="menu-item-has-children"><a href="#">Blog</a>
-										<ul class="sub-menu">
-											<li><a href="blog.html">Blog Standard</a></li>
-											<li><a href="blog-masonry.html">Blog Masonry</a></li>
-											<li><a href="blog-single.html">Single Post</a></li>
-										</ul>
-									</li>
-									<li class="menu-item-has-children"><a href="#">Portfolio</a>
-										<ul class="sub-menu">
-											<li><a href="portfolio-single-1.html">Portfolio 1</a></li>
-											<li><a href="portfolio-single-2.html">Portfolio 2</a></li>
-											<li><a href="portfolio-single-3.html">Portfolio 3</a></li>
-											<li><a href="portfolio-single-4.html">Portfolio 4</a></li>
-											<li><a href="portfolio-single-5.html">Portfolio 5</a></li>
-										</ul>
-									</li>
-								</ul>
-							</li>
-							<li><a href="start.html"><span class="menu-item-span">All Demos</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -90,7 +70,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h1 class="h1 m-b-15">Noah Woodward</h1>
-							<h1 class="h6">Mind Behind The Mac</h1>
+							<h1 class="h6">Behind The Mac</h1>
 						</div>
 					</div>
 				</div>
@@ -103,8 +83,8 @@
 					<div class="row">
 						<div class="col-md-12">
 							<div class="m-title c-align">
-								<h2>Daniel Raleway</h2>
-								<h6>Visual Designer & Front-end Developer</h6>
+								<h2>Noah Woodward</h2>
+								<h6>Voice and Mobile Software Engineer</h6>
 							</div>
 						</div>
 					</div>
