Changed logo sizing and working on the navbar animations

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<header class="header header-center">
 			<div class="container-fluid">
 				<!-- Brand-->
-				<div class="inner-header"><a class="inner-brand" href="index.html"><img class="brand-dark" src="assets/images/logo.png" width="30px" alt=""><img class="brand-light" src="assets/images/logo-light.png" width="30px" alt=""></a></div>
+				<div class="inner-header"><a class="inner-brand" href="#home"><img class="brand-dark" src="assets/images/logo.png" width="86px" alt=""><img class="brand-light" src="assets/images/logo-light.png" width="86px" alt=""></a></div>
 				<!-- Navigation-->
 				<div class="inner-navigation collapse">
 					<div class="inner-nav onepage-nav">
