--- a/index.html
+++ b/index.html
@@ -94,33 +94,26 @@
 						</div>
 						<div class="col-md-4">
 							<h5>Profesional Profile</h5>
-							<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest. Map where your photos.</p>
-							<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest. Map where your photos.</p>
+							<p>As a devoted innovator, I have strived to implement my passions as a developer to create high impact solutions throughout my life. I hope to apply my knowledge in both the fields of Voice Assistant and iOS development to completely change the world for the better. My technology </p>
 						</div>
 						<div class="col-md-4">
 							<h5>My Skills</h5>
 							<div class="progress-item">
-								<div class="progress-title">Gulp</div>
+								<div class="progress-title">Swift</div>
 								<div class="progress">
-									<div class="progress-bar progress-bar-brand" aria-valuenow="60" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
+									<div class="progress-bar progress-bar-brand" aria-valuenow="68" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
 								</div>
 							</div>
 							<div class="progress-item">
-								<div class="progress-title">UX Design</div>
+								<div class="progress-title">Node.js</div>
 								<div class="progress">
-									<div class="progress-bar progress-bar-brand" aria-valuenow="80" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
+									<div class="progress-bar progress-bar-brand" aria-valuenow="72" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
 								</div>
 							</div>
 							<div class="progress-item">
-								<div class="progress-title">HTML / CSS3 / SASS</div>
+								<div class="progress-title">Backend Web Development</div>
 								<div class="progress">
-									<div class="progress-bar progress-bar-brand" aria-valuenow="50" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
-								</div>
-							</div>
-							<div class="progress-item">
-								<div class="progress-title">Gulp</div>
-								<div class="progress">
-									<div class="progress-bar progress-bar-brand" aria-valuenow="60" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
+									<div class="progress-bar progress-bar-brand" aria-valuenow="57" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
 								</div>
 							</div>
 						</div>
