--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-4">
-							<p><img src="assets/images/im.jpg" alt=""></p>
+							<p><img src="assets/images/profilepic.png" alt=""></p>
 						</div>
 						<div class="col-md-4">
 							<h5>Profesional Profile</h5>
