Messing with JQuery stuff

--- a/index.html
+++ b/index.html
@@ -273,8 +273,6 @@
 			<!-- Clients and Testimonials-->
 			<section class="module module-dark">
 				<div class="container">
-
-
 					<!-- Testimonials-->
 					<div class="row">
 						<div class="col-md-8 m-auto">
@@ -327,7 +325,7 @@
 
 				</div>
 			</section>
-			<!-- Clients and Testimonials end-->
+			<!--  end-->
 
 			<!-- Posts-->
 			<section class="module module-gray" id="blog">
@@ -401,56 +399,6 @@
 				</div>
 			</section>
 			<!-- Posts end-->
-
-			<!-- Contact-->
-			<section class="module" id="contact">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="m-title c-align">
-								<h2>Let's talk</h2>
-								<h6>Drop us a line or give us a ring</h6>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<form id="contact-form" method="post" novalidate>
-								<div class="row">
-									<div class="form-group col-sm-4">
-										<input class="form-control" type="text" name="name" placeholder="Name" required="">
-										<p class="help-block text-danger"></p>
-									</div>
-									<div class="form-group col-sm-4">
-										<input class="form-control" type="email" name="email" placeholder="E-mail" required="">
-										<p class="help-block text-danger"></p>
-									</div>
-									<div class="form-group col-sm-4">
-										<input class="form-control" type="text" name="phone" placeholder="Phone" required="">
-										<p class="help-block text-danger"></p>
-									</div>
-									<div class="form-group col-sm-12">
-										<textarea class="form-control" name="message" placeholder="Message" rows="8" required="" style="height: 184px; ;"></textarea>
-									</div>
-									<div class="form-group col-sm-12">
-										<div class="text-center m-t-20">
-											<button class="btn btn-round btn-brand" type="submit"><span>Send Message</span></button>
-										</div>
-									</div>
-								</div>
-							</form>
-							<!-- Ajax response-->
-							<div class="ajax-response text-center" id="contact-response"></div>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<!-- Map-->
-			<section class="maps-container">
-				<div class="map" data-addresses="[48.859822, 2.352647]" data-info="[Lorem ipsum dolor sit amet.]" data-icon="assets/images/map-icon.png" data-zoom="15" data-street-view="1"></div>
-			</section>
-			<!-- Map end-->
 
 			<!-- Footer-->
 			<footer class="footer">
