Finished up content and formatting for the intro sections, looks good

--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 						</div>
 						<div class="col-md-4">
 							<h5>Profesional Profile</h5>
-							<p>As a devoted innovator, I have strived to implement my passions as a developer to create high impact solutions throughout my life. I hope to apply my knowledge in both the fields of Voice Assistant and iOS development to completely change the world for the better. My technology </p>
+							<p>As a devoted innovator, I have strived to implement my passions as a developer to create high impact solutions throughout my life. I hope to apply my knowledge in both the fields of Voice Assistant and iOS development to completely change the world for the better. When I am not developing, you can normally catch me playing a round of golf of playing games with friends. </p>
 						</div>
 						<div class="col-md-4">
 							<h5>My Skills</h5>
 							<div class="progress-item">
 								<div class="progress-title">Swift</div>
 								<div class="progress">
-									<div class="progress-bar progress-bar-brand" aria-valuenow="68" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
+									<div class="progress-bar progress-bar-brand" aria-valuenow="75" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
 								</div>
 							</div>
 							<div class="progress-item">
@@ -114,6 +114,18 @@
 								<div class="progress-title">Backend Web Development</div>
 								<div class="progress">
 									<div class="progress-bar progress-bar-brand" aria-valuenow="57" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
+								</div>
+							</div>
+							<div class="progress-item">
+								<div class="progress-title">Python</div>
+								<div class="progress">
+									<div class="progress-bar progress-bar-brand" aria-valuenow="68" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
+								</div>
+							</div>
+							<div class="progress-item">
+								<div class="progress-title">Product Development</div>
+								<div class="progress">
+									<div class="progress-bar progress-bar-brand" aria-valuenow="85" role="progressbar" aria-valuemin="0" aria-valuemax="100"><span class="pb-number-box"><span class="pb-number"></span>%</span></div>
 								</div>
 							</div>
 						</div>
@@ -129,7 +141,7 @@
 						<div class="col-md-12">
 							<div class="m-title c-align">
 								<h2>My Portfolio</h2>
-								<h6>An eye for detail makes our works excellent</h6>
+								<h6>My Canvas is The Code</h6>
 							</div>
 						</div>
 					</div>
@@ -137,10 +149,8 @@
 						<div class="col-md-12">
 							<ul class="filters h6" id="filters">
 								<li><a class="current" href="#" data-filter="*">All</a></li>
-								<li><a href="#" data-filter=".branding">Branding</a></li>
-								<li><a href="#" data-filter=".design">Design</a></li>
-								<li><a href="#" data-filter=".photo">Photo</a></li>
-								<li><a href="#" data-filter=".web">Web</a></li>
+								<li><a href="#" data-filter=".mobile">Mobile</a></li>
+								<li><a href="#" data-filter=".voice">Voice</a></li>
 							</ul>
 						</div>
 					</div>
