--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
 						<div class="grid-sizer"></div>
 						<div class="portfolio-item js-tilt branding photo large">
 							<div class="portfolio-wrapper">
-								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/g-5.jpg"></div>
+								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/knapsack.png"></div>
 								<div class="portfolio-overlay"></div>
 								<div class="portfolio-caption">
-									<h5 class="portfolio-title">Raleway</h5>
-									<h6 class="portfolio-subtitle">Branding</h6>
+									<h5 class="portfolio-title">KifuSF</h5>
+									<h6 class="portfolio-subtitle">Charity Application</h6>
 								</div>
 							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
 						</div>
