Added Kifu Stuff

--- a/index.html
+++ b/index.html
@@ -163,18 +163,18 @@
 								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/knapsack.png"></div>
 								<div class="portfolio-overlay"></div>
 								<div class="portfolio-caption">
-									<h5 class="portfolio-title">KifuSF</h5>
-									<h6 class="portfolio-subtitle">Charity Application</h6>
+									<h5 class="portfolio-title">Knapsack</h5>
+									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
 							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
 						</div>
 						<div class="portfolio-item js-tilt web design ">
 							<div class="portfolio-wrapper">
-								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/g-1.jpg"></div>
+								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/kifuSFimg.png"></div>
 								<div class="portfolio-overlay"></div>
 								<div class="portfolio-caption">
-									<h5 class="portfolio-title">Hilltop</h5>
-									<h6 class="portfolio-subtitle">Design</h6>
+									<h5 class="portfolio-title">KifuSF</h5>
+									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
 							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
 						</div>
