Fortnite Portfolio Updated

--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 						</div>
 						<div class="portfolio-item js-tilt photo web ">
 							<div class="portfolio-wrapper">
-								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/g-4.jpg"></div>
+								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/fortnitepic.png"></div>
 								<div class="portfolio-overlay"></div>
 								<div class="portfolio-caption">
-									<h5 class="portfolio-title">Popcorn</h5>
-									<h6 class="portfolio-subtitle">Design</h6>
+									<h5 class="portfolio-title">Fortnite News</h5>
+									<h6 class="portfolio-subtitle">Voice</h6>
 								</div>
 							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
 						</div>
