Did Intercom Portfolio

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
 						</div>
 						<div class="portfolio-item js-tilt design branding ">
 							<div class="portfolio-wrapper">
-								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/g-3.jpg"></div>
+								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/intercompic.png"></div>
 								<div class="portfolio-overlay"></div>
 								<div class="portfolio-caption">
-									<h5 class="portfolio-title">Color</h5>
-									<h6 class="portfolio-subtitle">Design</h6>
+									<h5 class="portfolio-title">Intercom</h5>
+									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
 							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
 						</div>
