Final Add for Portfolio-Glance

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<h5 class="portfolio-title">Knapsack</h5>
 									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
-							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
+							</div><a class="portfolio-link" href="">https://github.com/woodward4422/Knapsack</a>
 						</div>
 						<div class="portfolio-item js-tilt web design ">
 							<div class="portfolio-wrapper">
@@ -200,11 +200,11 @@
 						</div>
 						<div class="portfolio-item js-tilt design photo ">
 							<div class="portfolio-wrapper">
-								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/g-2.jpg"></div>
+								<div class="portfolio-img-wrap" data-background="assets/images/portfolio/glancePic.png"></div>
 								<div class="portfolio-overlay"></div>
 								<div class="portfolio-caption">
-									<h5 class="portfolio-title">Bicycles</h5>
-									<h6 class="portfolio-subtitle">Design</h6>
+									<h5 class="portfolio-title">Glance</h5>
+									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
 							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
 						</div>
