Added href for repos

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 									<h5 class="portfolio-title">Knapsack</h5>
 									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
-							</div><a class="portfolio-link" href="">https://github.com/woodward4422/Knapsack</a>
+							</div><a class="portfolio-link" href="https://github.com/woodward4422/Knapsack"></a>
 						</div>
 						<div class="portfolio-item js-tilt web design ">
 							<div class="portfolio-wrapper">
