Finalized hrefs for repos

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 									<h5 class="portfolio-title">KifuSF</h5>
 									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
-							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
+							</div><a class="portfolio-link" href="https://kifuapp.github.io/KifuSF-Website/"></a>
 						</div>
 						<div class="portfolio-item js-tilt photo web ">
 							<div class="portfolio-wrapper">
@@ -186,7 +186,7 @@
 									<h5 class="portfolio-title">Fortnite News</h5>
 									<h6 class="portfolio-subtitle">Voice</h6>
 								</div>
-							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
+							</div><a class="portfolio-link" href="https://github.com/woodward4422/fortnitenews"></a>
 						</div>
 						<div class="portfolio-item js-tilt design branding ">
 							<div class="portfolio-wrapper">
@@ -196,7 +196,7 @@
 									<h5 class="portfolio-title">Intercom</h5>
 									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
-							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
+							</div><a class="portfolio-link" href="https://github.com/woodward4422/Intercom"></a>
 						</div>
 						<div class="portfolio-item js-tilt design photo ">
 							<div class="portfolio-wrapper">
@@ -206,7 +206,7 @@
 									<h5 class="portfolio-title">Glance</h5>
 									<h6 class="portfolio-subtitle">Mobile</h6>
 								</div>
-							</div><a class="portfolio-link" href="portfolio-single-1.html"></a>
+							</div><a class="portfolio-link" href="https://github.com/woodward4422/Glance"></a>
 						</div>
 					</div>
 				</div>
