First resume block done

--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 								<li>
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
-										<div class="timeline-preview"><img src="assets/images/features/1.jpg" alt=""></div>
+										<div class="timeline-preview"><img src="assets/images/features/1.png" alt=""></div>
 										<div class="timeline-body">
-											<h5 class="timeline-title">Computer science</h5>
-											<h6 class="timeline-description">Stanford University | 1998 - 2004</h6>
-											<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+											<h5 class="timeline-title">Software Engineer</h5>
+											<h6 class="timeline-description"> Bluefin Technology Partners | 2018 - Present</h6>
+											<p>At 18 years old, I had the blessing to be able to work with a team of voice development pioneers and work as the initial backend engineer that was responsible for writing endpoints to handle Alexa requests, I have been able to work with companies that include Johnson and Johnson.</p>
 										</div>
 									</div>
 								</li>
