--- a/index.html
+++ b/index.html
@@ -241,33 +241,33 @@
 								<li>
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
-										<div class="timeline-preview"><img src="assets/images/features/2.jpg" alt=""></div>
+										<div class="timeline-preview"><img src="assets/images/features/2.png" alt=""></div>
 										<div class="timeline-body">
-											<h5 class="timeline-title">Visual designer</h5>
-											<h6 class="timeline-description">Stanford University | 2004 - 2008</h6>
-											<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+											<h5 class="timeline-title">iOS Development</h5>
+											<h6 class="timeline-description">Make School Summer Academy | 06/2018 - 08/2018 </h6>
+											<p>I took my first trek to the west coast to enlighten myself on the world of iOS development. I went from learning the basics to being able to master and apply complex topics in one summer!</p>
 										</div>
 									</div>
 								</li>
 								<li>
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
-										<div class="timeline-preview"><img src="assets/images/features/3.jpg" alt=""></div>
+										<div class="timeline-preview"><img src="assets/images/features/3.png" alt=""></div>
 										<div class="timeline-body">
-											<h5 class="timeline-title">Frontend-developer</h5>
-											<h6 class="timeline-description">Design Corporation | 2008 - 2012</h6>
-											<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+											<h5 class="timeline-title">Hackathon Champion</h5>
+											<h6 class="timeline-description">Twitch.tv/UMG Outside Hacks| 07/2018</h6>
+											<p>I Worked on a small team to build out an iOS application that revolutionized music meta-data with natural language processing and a twitch.tv chat integration.</p>
 										</div>
 									</div>
 								</li>
 								<li>
 									<div class="timeline-badge"></div>
 									<div class="timeline-panel">
-										<div class="timeline-preview"><img src="assets/images/features/4.jpg" alt=""></div>
+										<div class="timeline-preview"><img src="assets/images/features/4.png" alt=""></div>
 										<div class="timeline-body">
-											<h5 class="timeline-title">Lead Developer</h5>
-											<h6 class="timeline-description">Creative Design Studio | 2012 - 2017</h6>
-											<p>Map where your photos were taken and discover local points of interest. Map where your photos. Map where your photos were taken and discover local points of interest.</p>
+											<h5 class="timeline-title">Make School Product College </h5>
+											<h6 class="timeline-description"> Bachelors in Applied Computer Science | 2018 - Present</h6>
+											<p> My passion for developing software has lead me to attend Make School which pursues an education pedagogy based on project based applied computer science.</p>
 										</div>
 									</div>
 								</li>
