Quotes section and reformatting images

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 								</li>
 								<div class="timeline-top"></div>
 							</ul>
-							<div class="text-center"><a class="btn btn-lg btn-gray" href="#"><span>Download CV</span></a></div>
+							<div class="text-center"><a class="btn btn-lg btn-gray" href="assets/noah_woodward_resume_final.pdf"><span>Download CV</span></a></div>
 						</div>
 					</div>
 				</div>
@@ -294,11 +294,12 @@
 									</div>
 									<div class="tms-content">
 										<blockquote>
-											<p>If you want to know what a man's like, take a good look at how he treats his inferiors, not his equals.</p>
+											<p>Quotes I live by:</p>
+											<p>Skills are cheap, passion is priceless</p>
 										</blockquote>
 									</div>
 									<div class="tms-author">
-										<h6>J.K. Rowling</h6>
+										<h6>Gary Vaynerchuck</h6>
 									</div>
 								</div>
 								<div class="tms-item">
@@ -307,11 +308,12 @@
 									</div>
 									<div class="tms-content">
 										<blockquote>
-											<p>To be yourself in a world that is constantly trying to make you something else is the greatest accomplishment.</p>
+											<p>Quotes I live by:</p>
+											<p>Never assume you can't do something. Push yourself to redefine the boundaries</p>
 										</blockquote>
 									</div>
 									<div class="tms-author">
-										<h6>Ralph Waldo Emerson</h6>
+										<h6>Brian Chesky</h6>
 									</div>
 								</div>
 								<div class="tms-item">
@@ -320,11 +322,11 @@
 									</div>
 									<div class="tms-content">
 										<blockquote>
-											<p>Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring.</p>
+											<p>Concentration comes out of a combination of confidence and hunger.</p>
 										</blockquote>
 									</div>
 									<div class="tms-author">
-										<h6>Marilyn Monroe</h6>
+										<h6>Arnold Palmer</h6>
 									</div>
 								</div>
 							</div>
