--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 									</div>
 									<div class="tms-content">
 										<blockquote>
-											<p>Concentration comes out of a combination of confidence and hunger.</p>
+											<p>Concentration comes out of a combination of confidence and hunger. A</p>
 										</blockquote>
 									</div>
 									<div class="tms-author">
