--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<div class="wrapper">
 
 			<!-- Page Header-->
-			<section class="module-header full-height parallax bg-dark" id="home" data-background="assets/images/module-13.jpg">
+			<section class="module-header full-height parallax bg-dark" id="home" data-background="assets/images/testerPic.jpg">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
